--- a/src/styles.css
+++ b/src/styles.css
@@ -10,15 +10,15 @@ a {
 .weather-app {
   background: white;
   max-width: 600px;
-  margin: 60px auto;
+  margin: 50px auto;
   padding: 30px;
-  border-radius: 10px;
+  border-radius: 15px;
   box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
 }
 
 header {
   border-bottom: 1px solid #f9f7fe;
-  padding-bottom: 30px;
+  padding-bottom: 0 0 30px 0;
 }
 
 .search-input {
@@ -26,7 +26,7 @@ header {
   border: none;
   color: rgba(39, 33, 66, 0.4);
   font-size: 16px;
-  padding: 20px;
+  padding: 15px 20px;
   width: 75%;
   border-radius: 6px;
 }
@@ -37,7 +37,7 @@ header {
   background-color: #885df1;
   color: white;
   border: none;
-  padding: 20px;
+  padding: 15px 20px;
   line-height: 1;
   border-radius: 5px;
 }
@@ -46,53 +46,51 @@ main {
   padding: 30px 0;
 }
 
-.current-temperature {
-  font-size: 48px;
-}
-
-.current-weather {
+.weather-app-data {
   display: flex;
   justify-content: space-between;
 }
 
-.current-city {
+.weather-app-city {
   font-size: 38px;
-  font-weight: 900;
+  line-height: 48px;
   margin: 0;
 }
-.current-details {
+.weather-app-details {
   color: rgba(39, 33, 66, 0.4);
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
 }
 
-.current-details strong {
+.weather-app-details strong {
   color: #f65282;
 }
 
-.current-temperature-icon {
-  position: relative;
-  top: -8px;
-  font-size: 40px;
-  margin-right: 10px;
+.weather-app-temperature-container {
+  display: flex;
 }
 
-.current-temperature-value {
+.weather-app-icon {
+  width: 88px;
+  height: 88px;
+}
+
+.weather-app-temperature {
   font-size: 80px;
   font-weight: bold;
+  line-height: 88px;
 }
 
-.current-temperature-unit {
+.weather-app-unit {
+  margin-top: 6px;
   font-size: 28px;
-  position: relative;
-  top: -38px;
 }
 
 footer {
   border-top: 1px solid #f9f7fe;
   text-align: center;
-  padding-top: 15px;
-
+  padding-top: 30px 0 0 0;
+  font-size: 14px;
   color: rgba(39, 33, 66, 0.4);
 }
